# trustfall-rustdoc-adapter

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: indexed_crate.rs
scripts/: prepare_benchmark_data.sh  regenerate_test_rustdocs.sh
src/: adapter.rs  attributes.rs  indexed_crate.rs  item_optimization.rs  lib.rs  method_lookup_optimization.rs  rustdoc_schema.graphql  sealed_trait.rs  test_util.rs  visibility_tracker.rs
src/adapter/: edges.rs  enum_variant.rs  mod.rs  origin.rs  properties.rs  rust_type_name.rs  tests.rs  typename.rs  vertex.rs
test_crates/associated_consts/: Cargo.toml
test_crates/consts/: Cargo.toml
test_crates/cyclic_overlapping_glob_and_local_item/: Cargo.toml
test_crates/declarative_macros/: Cargo.toml
test_crates/dummy_ext/: Cargo.toml
test_crates/enum_discriminants/: Cargo.toml
test_crates/enums_are_not_modules/: Cargo.toml
test_crates/explicit_reexport_of_matching_names/: Cargo.toml
test_crates/features/: Cargo.toml
test_crates/function_abi/: Cargo.toml
test_crates/function_export_name/: Cargo.toml
test_crates/function_has_body/: Cargo.toml
test_crates/generic_parameters/: Cargo.toml
test_crates/glob_of_enum_does_not_shadow_local_fn/: Cargo.toml
test_crates/glob_of_glob_reexport/: Cargo.toml
test_crates/glob_of_renamed_reexport/: Cargo.toml
test_crates/glob_reexport/: Cargo.toml
test_crates/glob_reexport_cycle/: Cargo.toml
test_crates/glob_reexport_enum_variants/: Cargo.toml
test_crates/glob_vs_glob_no_shadowing_for_same_item/: Cargo.toml
test_crates/glob_vs_glob_no_shadowing_for_same_multiply_renamed_item/: Cargo.toml
test_crates/glob_vs_glob_no_shadowing_for_same_renamed_item/: Cargo.toml
test_crates/glob_vs_glob_shadowing/: Cargo.toml
test_crates/glob_vs_glob_shadowing_downstream/: Cargo.toml
test_crates/impl_for_ref/: Cargo.toml
test_crates/importable_paths/: Cargo.toml
test_crates/indirect_deprecations/: Cargo.toml
test_crates/infinite_corecursive_reexport/: Cargo.toml
test_crates/infinite_indirect_recursive_reexport/: Cargo.toml
test_crates/infinite_recursive_reexport/: Cargo.toml
test_crates/modules/: Cargo.toml
test_crates/nested_overlapping_glob_and_local_item/: Cargo.toml
test_crates/nested_reexport_as_underscore/: Cargo.toml
test_crates/no_shadowing_across_namespaces/: Cargo.toml
test_crates/overlapping_glob_and_local_item/: Cargo.toml
test_crates/overlapping_glob_and_local_module/: Cargo.toml
test_crates/overlapping_glob_and_private_import/: Cargo.toml
test_crates/overlapping_glob_and_renamed_module/: Cargo.toml
test_crates/overlapping_glob_of_enum_with_local_item/: Cargo.toml
test_crates/overlapping_reexport_as_underscore/: Cargo.toml
test_crates/proc_macros/: Cargo.toml
test_crates/pub_generic_type_alias_added_defaults/: Cargo.toml
test_crates/pub_generic_type_alias_changed_defaults/: Cargo.toml
test_crates/pub_generic_type_alias_omitted_default/: Cargo.toml
test_crates/pub_generic_type_alias_reexport/: Cargo.toml
test_crates/pub_generic_type_alias_same_signature_but_not_equivalent/: Cargo.toml
test_crates/pub_generic_type_alias_shuffled_order/: Cargo.toml
test_crates/pub_inside_pub_crate_mod/: Cargo.toml
test_crates/pub_type_alias_of_composite_type/: Cargo.toml
test_crates/pub_type_alias_of_type_alias/: Cargo.toml
test_crates/pub_type_alias_reexport/: Cargo.toml
test_data/: rustdoc_v16.json  rustdoc_v23.json  rustdoc_v24.json
(+99 files in other folders)
