[package]
name = "trustfall-rustdoc-adapter"
version = "23.5.4"
edition = "2021"
authors = ["Predrag Gruevski <obi1kenobi82@gmail.com>"]
license = "Apache-2.0 OR MIT"
description = "Trustfall query adapter for rustdoc JSON data."
repository = "https://github.com/obi1kenobi/trustfall-rustdoc-adapter"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trustfall = "0.5.0"
rustdoc-types = "0.19.0"

[dev-dependencies]
anyhow = "1.0.58"
itertools = "0.10.5"
serde_json = "1.0.85"
serde = { version = "1.0.145", features = ["derive"] }
maplit = "1.0.2"
