[package]
name = "trustfall-rustdoc-adapter"
version = "24.5.2"
edition = "2021"
authors = ["Predrag Gruevski <obi1kenobi82@gmail.com>"]
license = "Apache-2.0 OR MIT"
description = "Trustfall query adapter for rustdoc JSON data."
repository = "https://github.com/obi1kenobi/trustfall-rustdoc-adapter"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trustfall = "0.6.0"
rustdoc-types = "0.20.0"

[dev-dependencies]
anyhow = "1.0.58"
itertools = "0.11.0"
serde_json = "1.0.85"
serde = { version = "1.0.185", features = ["derive"] }
maplit = "1.0.2"
version_check = "0.9.4"
similar-asserts = { version = "1.4.2", features = ["serde"] }
