[package]
name = "trustfall-rustdoc-adapter"
version = "33.1.11"
edition = "2021"
authors = ["Predrag Gruevski <obi1kenobi82@gmail.com>"]
license = "Apache-2.0 OR MIT"
description = "Trustfall query adapter for rustdoc JSON data."
repository = "https://github.com/obi1kenobi/trustfall-rustdoc-adapter"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trustfall = "0.7.1"
rayon = { version = "1.10.0", optional = true }
rustdoc-types = "0.29.1"
rustc-hash = { version = "2.0.0", optional = true }

[features]
default = []
# Enable rayon for speeding up building `IndexedCrate`, this massively improves
# performance on big crates, but may impact performance on small crates and
# definitely increases the memory usage
rayon = ["dep:rayon"]
# Use rustc-hash::{FxHashMap, FxHashSet} internally for improved performance
rustc-hash = ["dep:rustc-hash"]

[[bench]]
name = "indexed_crate"
harness = false

[profile.bench]
debug = 1 # We only need function name information (for flamegraphs)

[dev-dependencies]
anyhow = "1.0.89"
criterion = "0.5.1"
itertools = "0.13.0"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
maplit = "1.0.2"
version_check = "0.9.5"
similar-asserts = { version = "1.6.0", features = ["serde"] }
